--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,5 @@
-appdirs==1.4.4
-distlib==0.3.1
-filelock==3.0.12
-pbr==5.5.1
-six==1.15.0
-stevedore==3.3.0
-virtualenv==20.2.2
-virtualenv-clone==0.5.4
-virtualenvwrapper==4.8.4
-virtualenvwrapper-win==1.2.6
+dj-database-url==0.5.0
+Django==3.1.5
+gunicorn==20.0.4
+psycopg2-binary=2.8.6
+whitenoise==5.2.0
